create songs folder

--- a/toyz.html
+++ b/toyz.html
@@ -2,46 +2,75 @@
 <html lang=“es”>
 
 <head>
-  <meta charset="utf-8" />
-  <meta http-equiv="" X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
-  <link rel="STYLESHEET" href="css/estilos.css">
-  <link rel="icon" href="img/html.ico">
-  <!--  -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
-  <title>Toyz</title>
+    <meta charset="utf-8" />
+    <meta http-equiv="" X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="STYLESHEET" href="css/estilos.css">
+    <title>Tone Js Test Area</title>
+    <link rel="icon" href="img/html.ico">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
 </head>
-<header class="header" id="header"> Producer E87
-</header>
+
+<style>
+    .waiting_title {
+        font-size: 8rem;
+        background-color: rgba(16, 139, 51, 0.5);
+    }
+</style>
+
+<div class="ProducerE87_Tag">
+    Producer E87
+</div>
+
+
+<div>
+    <!--
+    <div id="label">Html+Css+Js</div>
+    <nav class="nav__btn" id="nav__btn">
+        <div>
+            <a href="brazil_2050.html"> brazil 2050</a> <br>
+        </div>
+    </nav>
+   
+    <br><br> -->
+    <!--
+    |<div id="label">Web Audio Api</div>
+    <nav class="nav__btn" id="nav__btn">
+        <div>
+            <a href="2 OSC STEREO PANNED.html"> 2osc</a> <br>
+        </div>
+        <div> <a href="5 OSC STEREO PANNED.html"> 5osc</a> <br></div>
+        <div> <a href="20 HZ OSC STEREO PANNED.html"> Out of phase 20 hz</a> <br></div>
+        <div> <a href="ASCommando.html"> ASCommando</a><br>
+            <a href="Seq.html"> Seq</a> <br> 
+        </div>
+    </nav>
+    -->
+    <br><br>
+    <div id="label">ToneJs Library</div>
+    <nav class="nav__btn" id="nav__btn">
+        <div>
+
+        <a href="sublow.html"> Sublow</a> <br>
+        <a href="etereal_noises.html"> Etereal noises</a> <br>
+        <a href="songs/keys.html"> Keys</a> <br>
+        <a href="songs/slownlow.html"> Slownlow</a>      <br>
+            
+        <a href="songs/WEBAUDIOAPI.html"> Web Audio API Voice</a> <br>
+
+        <!--     <a href="latest.html"> latest</a> <br>
+        -->
+        </div>
+    </nav>
+</div>
+
 
 <body>
+    <main>
 
-      <nav class="nav" id="nav_Menu">
-        <a href="songs/sublow.html"> Sublow</a>
-        <br>
-        <a href="songs/slownlow.html"> Slownlow</a>
-        <br>
-        <a href="songs/keys.html"> Keys</a>
-        <br>
-        <a href="songs/etereal_noises.html"> Etereal noises</a>
-        <br>
-        <a href="songs/ASCommando.html"> ASCommando</a>
-        <br>
-        <a href="songs/2 OSC STEREO PANNED.html"> 2 OSC STEREO PANNED</a>
-        <br>
-        <a href="songs/5 OSC STEREO PANNED.html"> 5 OSC STEREO PANNED</a>
-        <br>
-        <a href="songs/Seq.html"> Seq</a>
-        <br>
-        <a href="songs/latest.html"> Latest</a>
-        <br>
-        <a href="songs/WEBAUDIOAPI.html"> WEBAUDIOAPI Voice</a>
-      </nav>
-
+    </main>
 </body>
 
 </html>
