create songs folder

--- a/toyz.html
+++ b/toyz.html
@@ -39,12 +39,12 @@
     |<div id="label">Web Audio Api</div>
     <nav class="nav__btn" id="nav__btn">
         <div>
-            <a href="2 OSC STEREO PANNED.html"> 2osc</a> <br>
+            <a href="songs/2 OSC STEREO PANNED.html"> 2osc</a> <br>
         </div>
-        <div> <a href="5 OSC STEREO PANNED.html"> 5osc</a> <br></div>
-        <div> <a href="20 HZ OSC STEREO PANNED.html"> Out of phase 20 hz</a> <br></div>
-        <div> <a href="ASCommando.html"> ASCommando</a><br>
-            <a href="Seq.html"> Seq</a> <br> 
+        <div> <a href="songs/5 OSC STEREO PANNED.html"> 5osc</a> <br></div>
+        <div> <a href="songs/20 HZ OSC STEREO PANNED.html"> Out of phase 20 hz</a> <br></div>
+        <div> <a href="songs/ASCommando.html"> ASCommando</a><br>
+            <a href="songs/Seq.html"> Seq</a> <br> 
         </div>
     </nav>
     -->
@@ -53,14 +53,14 @@
     <nav class="nav__btn" id="nav__btn">
         <div>
 
-        <a href="sublow.html"> Sublow</a> <br>
-        <a href="etereal_noises.html"> Etereal noises</a> <br>
+        <a href="songs/sublow.html"> Sublow</a> <br>
+        <a href="songs/etereal_noises.html"> Etereal noises</a> <br>
         <a href="songs/keys.html"> Keys</a> <br>
         <a href="songs/slownlow.html"> Slownlow</a>      <br>
-            
+        <br>  <br>  <br>
         <a href="songs/WEBAUDIOAPI.html"> Web Audio API Voice</a> <br>
 
-        <!--     <a href="latest.html"> latest</a> <br>
+        <!--     <a href="songs/latest.html"> latest</a> <br>
         -->
         </div>
     </nav>
