Testing of eq/comp states needded

--- a/step_9.html
+++ b/step_9.html
@@ -275,7 +275,7 @@
     <h2>1</h2>
     RMS <p id="player_1_rms_value"> </p>
     <br>
-    RMS <p id="player_1_rms_after_volume_value"> </p>
+    RMS_after_volume_value <p id="player_1_rms_after_volume_value"> </p>
     <br>
     
     <p id="player_1_songName"> </p>
@@ -354,7 +354,6 @@
       <p id="player_1_fadeOut_value"></p>
       <br>
     </div>
-
     <button type="button" class="collapsible">
       EQ
     </button>
@@ -629,7 +628,6 @@
       </div>
       <br>
     </div>
-
     <button type="button" class="collapsible">
       Dynamics
     </button>
