file_API + analyser_API

--- a/step_9.html
+++ b/step_9.html
@@ -137,7 +137,9 @@
         <button id="consoleClear" onclick="consoleClear()"> consoleClear </button>
         <button id="Sinte" onclick="Sinte()"> Sinte </button>
         <button id="CustomizedButton" onclick="CustomizedButton()"> Boton a customizar</button>
-
+        <!--
+        <button id="CustomizedButton" onclick="CustomizedButton()"> Boton a customizar</button>
+-->
       </section>
     </fieldset>
     <br> <br>
