--- a/file_API_2.html
+++ b/file_API_2.html
@@ -7,24 +7,18 @@
 </head>
 
 <body>
-    <h1>file_API.js</h1>
+    <h1>file_API_Mid.js</h1>
 
-    <button id="loadButton" onclick="loadSong()">Load</button>
-    <button id="otroButton" onclick="asyncSong()">otro</button>
+    <button id="loadButton" onclick="load_Local()">Load</button>
+ 
 <audio id="audio"></audio>
-<br><br>
-    <canvas id="waveform" width="70" height="15"></canvas>
-    <canvas id="frequencies" width="70" height="15"></canvas>
-
-    <br><br>
-<textarea name="cancionesLista" rows="10" cols="50">write something here</textarea>
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.8.49/Tone.js"
         integrity="sha512-jduERlz7En1IUZR54bqzpNI64AbffZWR//KJgF71SJ8D8/liKFZ+s1RxmUmB+bhCnIfzebdZsULwOrbVB5f3nQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
-    <script src="js/file_API.js"></script>
+    <script src="js/file_API_mid.js"></script>
 
     <!--
     <script src="https://unpkg.com/tone"></script>
